# software_intro_task

./: .gitignore  README.md  start.sh
.github/: CODEOWNERS
.github/workflows/: ros2-ci.yaml
bag_files/test_output/: metadata.yaml  test_output_0.db3
install/: local_setup.sh  setup.sh
install/teleop_msgs/include/teleop_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/teleop_msgs/include/teleop_msgs/msg/detail/: vehicle_control_data__functions.h  vehicle_control_data__rosidl_typesupport_fastrtps_c.h  vehicle_control_data__rosidl_typesupport_fastrtps_cpp.hpp  vehicle_control_data__rosidl_typesupport_introspection_c.h  vehicle_control_data__traits.hpp  vehicle_control_data__type_support.cpp  vehicle_control_data__type_support.h
install/teleop_msgs/include/teleop_msgs/srv/: emergency_stop.hpp
install/teleop_msgs/include/teleop_msgs/srv/detail/: emergency_stop__builder.hpp  emergency_stop__functions.c  emergency_stop__rosidl_typesupport_fastrtps_c.h  emergency_stop__rosidl_typesupport_fastrtps_cpp.hpp  emergency_stop__type_support.c  emergency_stop__type_support.cpp
install/teleop_msgs/share/teleop_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/teleop_msgs/share/teleop_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  teleop_msgsConfig.cmake  teleop_msgs__rosidl_generator_cExport.cmake  teleop_msgs__rosidl_typesupport_cExport.cmake  teleop_msgs__rosidl_typesupport_cppExport-noconfig.cmake  teleop_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  teleop_msgs__rosidl_typesupport_introspection_cExport.cmake  teleop_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/teleop_msgs/share/teleop_msgs/srv/: EmergencyStop_Request.msg
log/: latest_build
src/teleop_cpp/: CMakeLists.txt  package.xml
src/teleop_cpp/design/: teleop_cpp-design.md
src/teleop_cpp/include/teleop_cpp/: teleop_cpp_node.hpp
src/teleop_cpp/launch/: teleop_cpp.launch.py
src/teleop_cpp/param/: teleop_cpp.yaml
src/teleop_cpp/src/: teleop_cpp_node.cpp
src/teleop_msgs/: CMakeLists.txt  package.xml
src/teleop_msgs/design/: teleop_msgs-design.md
src/teleop_msgs/msg/: VehicleControlData.msg
src/teleop_py/: package.xml  setup.py
src/teleop_py/launch/: teleop_py.launch.py
src/teleop_py/teleop_py/: teleop_py_node.py
teleop_cpp/: package.xml
teleop_cpp/include/teleop_cpp/: teleop_cpp.hpp  visibility_control.hpp
teleop_cpp/launch/: teleop_cpp.launch.py
teleop_cpp/src/: teleop_cpp.cpp
teleop_msgs/: CMakeLists.txt  package.xml
teleop_msgs/msg/: VehicleControlData.msg
teleop_msgs/srv/: EStop.srv  EmergencyStop.srv
teleop_py/: package.xml  setup.cfg
teleop_py/design/: teleop_py-design.md
teleop_py/param/: teleop_py.yaml
teleop_py/teleop_py/: teleop_py_node.py
(+1 files in other folders)
